# app/schema/default.go
@@ -1,0 +1,5 @@
+package schema
+
+type DefaultSchema struct {
+	Message string `json:"message"`
+}
